style: fix overflowing images for Safari

--- a/ui/src/design-system/components/image-carousel/image-carousel.module.scss
+++ b/ui/src/design-system/components/image-carousel/image-carousel.module.scss
@@ -54,6 +54,7 @@
   justify-content: center;
   padding: 10px;
   box-sizing: border-box;
+  overflow: hidden;
 
   &:not(.visible) {
     opacity: 0;
